--- a/admin-server/src/main/resources/application.properties
+++ b/admin-server/src/main/resources/application.properties
@@ -3,4 +3,6 @@ server.port=8081
 # 不启动安全管理
 management.security.enabled=false
 
+spring.boot.admin.routes.endpoints: env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream
+
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
