--- a/admin-server/pom.xml
+++ b/admin-server/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-server-ui-hystrix</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
