--- a/admin-server/src/main/resources/application.properties
+++ b/admin-server/src/main/resources/application.properties
@@ -5,4 +5,14 @@ management.security.enabled=false
 
 spring.boot.admin.routes.endpoints: env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,hystrix.stream
 
+#basic安全认证
+spring.boot.admin.username=123456
+spring.boot.admin.password=123456
+#client basic安全认证
+spring.boot.admin.client.metadata.user.name: 123456
+spring.boot.admin.client.metadata.user.password: 123456
+
+security.user.name=123456
+security.user.password=123456
+
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka/
